--- a/kdots/css/src/framework.less
+++ b/kdots/css/src/framework.less
@@ -143,3 +143,8 @@ table.et2_grid > tbody > tr > td:last-child et2-image.iphoto {
   left: 10px;
   top: -2px;
 }
+
+// iframe Error messages do not wrap and are unreadable
+iframe pre{
+  white-space: pre-wrap;
+}
