--- a/kdots/css/src/header.less
+++ b/kdots/css/src/header.less
@@ -86,7 +86,7 @@
 	display: flex;
 	align-items: center;
 	padding: 0px;
-	width: calc(1.8 * var(--icon-size));
+	width: calc(calc(3 * var(--header-icon-size)) + 0.5rem);
 	height: var(--header-icon-size);
 	left: var(--sl-spacing-large);
 	border: 1px solid var(--sl-color-neutral-600);
