--- a/kdots/css/themes/dark.css
+++ b/kdots/css/themes/dark.css
@@ -1,18 +1,18 @@
 html[data-darkmode="1"],
 .sl-theme-dark {
-  background-color: black;
+  background-color: var(--sl-color-neutral-50);
   color: var(--sl-color-neutral-700);
-  --sl-color-primary-950: hsl(from var(--primary-color) h s calc(l + 18));
-  --sl-color-primary-900: hsl(from var(--primary-color) h s calc(l + 16));
-  --sl-color-primary-800: hsl(from var(--primary-color) h s calc(l + 12));
-  --sl-color-primary-700: hsl(from var(--primary-color) h s calc(l + 8));
-  --sl-color-primary-600: hsl(from var(--primary-color) h s calc(l + 4));
-  --sl-color-primary-500: var(--primary-color);
-  --sl-color-primary-400: hsl(from var(--primary-color) h s calc(l - 4));
-  --sl-color-primary-300: hsl(from var(--primary-color) h s calc(l - 8));
-  --sl-color-primary-200: hsl(from var(--primary-color) h s calc(l - 12));
-  --sl-color-primary-100: hsl(from var(--primary-color) h s calc(l - 16));
-  --sl-color-primary-50: hsl(from var(--primary-color) h s calc(l - 18));
+  --sl-color-primary-50: hsl(210, 43%, 10%);
+  --sl-color-primary-100: hsl(210, 43%, 15%);
+  --sl-color-primary-200: hsl(210, 43%, 20%);
+  --sl-color-primary-300: hsl(210, 43%, 26%);
+  --sl-color-primary-400: hsl(210, 40%, 33%);
+  --sl-color-primary-500: hsl(210, 40%, 42%);
+  --sl-color-primary-600: hsl(210, 38%, 53%);
+  --sl-color-primary-700: hsl(210, 36%, 63%);
+  --sl-color-primary-800: hsl(210, 33%, 73%);
+  --sl-color-primary-900: hsl(210, 30%, 84%);
+  --sl-color-primary-950: hsl(210, 25%, 94%);
   /*** HEADER ***/
   /*** APPLICATION ***/
   /*** End APPLICATION ***/
@@ -812,6 +812,10 @@ span.flatpickr-weekday {
 }
 
   /** End WIDGETS **/
+  /**
+  * images that look like bootstrap icons can be inverted nicely into darkmode
+  * This is deprecated, we should replace these either with et2-images or use the bootstrap icons directly
+  **/
 }
 html[data-darkmode="1"] #egw_fw_topmenu_info_items #topmenu_info_timer:before,
 .sl-theme-dark #egw_fw_topmenu_info_items #topmenu_info_timer:before {
@@ -819,21 +823,21 @@ html[data-darkmode="1"] #egw_fw_topmenu_info_items #topmenu_info_timer:before,
 }
 html[data-darkmode="1"] egw-app,
 .sl-theme-dark egw-app {
-  --application-header-text-color: var(--sl-color-neutral-700);
+  --application-header-text-color: var(--sl-color-neutral-900);
 }
 html[data-darkmode="1"] .et2_container,
 .sl-theme-dark .et2_container {
   background-color: initial;
+}
+html[data-darkmode="1"] .egw_tooltip,
+.sl-theme-dark .egw_tooltip {
+  filter: 80%;
 }
 html[data-darkmode="1"] .dialogFooterToolbar et2-button::part(base):not(:hover),
 .sl-theme-dark .dialogFooterToolbar et2-button::part(base):not(:hover),
 html[data-darkmode="1"] et2-dialog et2-button[variant='default'][slot='footer']::part(base):not(:hover),
 .sl-theme-dark et2-dialog et2-button[variant='default'][slot='footer']::part(base):not(:hover) {
   background-color: var(--sl-input-background-color);
-}
-html[data-darkmode="1"] .nextmatch_sortheader,
-.sl-theme-dark .nextmatch_sortheader {
-  color: #96bcd9;
 }
 html[data-darkmode="1"] .flatpickr-calendar,
 .sl-theme-dark .flatpickr-calendar {
@@ -876,3 +880,8 @@ html[data-darkmode="1"] .flatpickr-calendar .flatpickr-time,
 .flatpickr-calendar.hasTime .sl-theme-dark .flatpickr-calendar .flatpickr-time {
   border-top: var(--sl-panel-border-width) solid var(--sl-panel-border-color);
 }
+html[data-darkmode="1"] img[src^='/egroupware/node_modules/bootstrap-icons/icons/'],
+.sl-theme-dark img[src^='/egroupware/node_modules/bootstrap-icons/icons/'] {
+  filter: invert(1);
+}
+/*# sourceMappingURL=dark.css.map */
